# clash-protocols-memmap

./: .gitignore  Cargo.toml  README.md  cabal.project  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
clash-protocols-memmap/: clash-protocols-memmap.cabal
clash-protocols-memmap-tests/: Setup.hs  clash-protocols-memmap-tests.cabal
clash-protocols-memmap-tests/app/: Example.hs  HdlTest.hs
clash-protocols-memmap-tests/data/: TestCpu.scala
clash-protocols-memmap-tests/test/: Main.hs
clash-protocols-memmap/app/: Clash.hi  Example.hi  HdlTest.hi  HdlTest.hs
clash-protocols-memmap/src/Internal/HdlTest/: UartMock.hs
clash-protocols-memmap/src/Protocols/: MemoryMap.hs
clash-protocols-memmap/src/Protocols/MemoryMap/: Check.hs
docs/: json-export.md
rust/clash-bindings/: Cargo.toml
rust/clash-bindings/src/: bitvector.rs  index.rs  lib.rs  mask.rs  mod.rs  signed.rs  unsigned.rs
rust/clash-macros/: Cargo.toml
rust/clash-macros/src/: lib.rs
rust/integration-tests/bindings-c/: .gitignore  Cargo.toml  build.rs
rust/integration-tests/bindings-c/src/: lib.rs
rust/integration-tests/bindings-rust/: .gitignore  Cargo.toml  build.rs
rust/integration-tests/bindings-rust/src/: lib.rs
rust/memorymap-compiler/: Cargo.toml
rust/memorymap-compiler-base/: Cargo.toml
rust/memorymap-compiler-c/: Cargo.toml
rust/memorymap-compiler-c/src/: device_desc.rs  device_instances.rs  lib.rs  type_desc.rs
rust/memorymap-compiler-rust/: Cargo.toml
rust/memorymap-compiler-rust/src/: device_desc.rs  device_instances.rs  lib.rs  testing_utils.rs  type_desc.rs  type_reference.rs  types.rs
rust/memorymap-compiler-rust/tests/: zero_width_docs.rs
rust/memorymap-compiler/src/: build_utils.rs  input_language.rs  lib.rs
rust/memorymap-compiler/src/backends/: mod.rs
(+15 files in other folders)
