# SPDX-FileCopyrightText: 2025 Google LLC
#
# SPDX-License-Identifier: CC0-1.0
[workspace]
resolver = "2"
members = [
    "rust/memorymap-compiler",
    "rust/memorymap-compiler-c",
    "rust/memorymap-compiler-rust",

    "rust/integration-tests/bindings-c",
    "rust/integration-tests/bindings-rust",
]
