# SPDX-FileCopyrightText: 2026 Google LLC
#
# SPDX-License-Identifier: Apache-2.0
[package]
name = "bindings-rust"
version = "0.1.0"
edition = "2024"

[dependencies]

[build-dependencies]
memorymap-compiler = { path = "../../memorymap-compiler" }
memorymap-compiler-rust = { path = "../../memorymap-compiler-rust" }
proc-macro2 = "*"
quote = "*"
